# tap-pingboard

./: .gitignore  MANIFEST.in  README.md  catalog.json  config.json  meltano.yml  pyproject.toml  requirements.txt  sample_config.json  setup.py
tap_pingboard/: __init__.py  auth.py  client.py  streams.py  tap.py
tap_pingboard/schemas/: custom_fields.json  groups.json  locations.json  pingboard_users_stream.json  users.json
tap_pingboard/tests/: __init__.py  test_core.py
