[tool.poetry]
name = "tap-pingboard"
version = "0.2.0"
description = "`tap-pingboard` is Singer tap for Pingboard, built with the Singer SDK."
authors = ["Zane Patten"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6"
requests = "^2.25.1"
singer-sdk = "^0.1.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-pingboard = 'tap_pingboard.tap:cli'
